themes/baja/static/css/main.css
/* some day I want to convert this into a minimal framework */
* {
  font-family: 'Avenir Next', 'HelveticaNeue-Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

body { font-size: 1em; }

.logo {
  display: block;
  margin: auto;
}

a {
  color: #FA743E;
  text-decoration: none;

  transition: color 0.1s linear;
  transition-property: color;
  transition-duration: 0.1s;
  transition-timing-function: linear;
  transition-delay: initial;
  outline: none;
}

a, a:link, a:visited {
  color: #FA743E;
}

a:hover {
  color: #FA743E;
  border-bottom: 2px solid #FA743E;
}

.nav {
  float: none;
  text-align: center;
}

.nav li {
  margin: 5px 10px;
  display: inline-block;
}

.nav a:hover {
  border-bottom: 3px solid #FA743E;
}

.post-list {
  max-width: 780px;
  margin: auto;
}

.intro {
  max-width: 780px;
  margin: auto;
  font-size: 1.2em;
}

.post-list a {
  /*color: #9b4dca;*/
  color: #333333;
}

.post-list .post {
  margin: 0.5em 0;
}

.post-body p, h1, h2, h3,h4,h5,h6 {
 margin: 1em 0;
}

.markdown-body a:hover {
  text-decoration: none;
}

